unpackaged/main/default/objects/Automation_Kill_Switch__c/Automation_Kill_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Per-automation kill switches. Add a Disable_[AutomationName]__c checkbox field for each specific automation (flow, batch, class) that needs an independent kill switch.</description>
    <label>Automation Kill Switch</label>
</CustomObject>