unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Apply_Default_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Disable_Apply_Default_Account_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Account - On Create - Apply Default Account Team flow.</description>
    <inlineHelpText>Check to disable the default Account Team assignment automation on new Partner Accounts.</inlineHelpText>
    <label>Disable Apply Default Account Team</label>
    <type>Checkbox</type>
</CustomField>