unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Benefit_Type_Create_and_Push__c.field-meta.xml
<CustomField>
    <fullName>Disable_Benefit_Type_Create_and_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Benefit Type - Screen Flow - Create &amp; Push flow (DWDECI-119).</description>
    <inlineHelpText>Check to disable the admin screen flow that creates a new Service Type and pushes Benefit records to selected Programs.</inlineHelpText>
    <label>Disable Benefit Type Create and Push</label>
    <type>Checkbox</type>
</CustomField>