unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Benefit_Type_Edit_Deactivate__c.field-meta.xml
<CustomField>
    <fullName>Disable_Benefit_Type_Edit_Deactivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Benefit Type - Screen Flow - Edit/Deactivate flow (DWDECI-119).</description>
    <inlineHelpText>Check to disable the admin screen flow that edits or deactivates a Service Type and cascades the change to its child Benefit records across all active Programs.</inlineHelpText>
    <label>Disable Benefit Type Edit Deactivate</label>
    <type>Checkbox</type>
</CustomField>