unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Cascade_MOU_Level__c.field-meta.xml
<CustomField>
    <fullName>Disable_Cascade_MOU_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Account - On Edit - Cascade MOU Level flow.</description>
    <inlineHelpText>Check to disable cascading MOU_Level__c to child Accounts when a parent Account is set to Corporate Level.</inlineHelpText>
    <label>Disable Cascade MOU Level</label>
    <type>Checkbox</type>
</CustomField>