unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Case_Escalation_Batch__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Escalation_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Case escalation batch job.</description>
    <inlineHelpText>Check to disable the Case escalation batch job.</inlineHelpText>
    <label>Disable Case Escalation Batch</label>
    <type>Checkbox</type>
</CustomField>