unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Default_MOU_Level_On_Create__c.field-meta.xml
<CustomField>
    <fullName>Disable_Default_MOU_Level_On_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Account - Before Save - Default MOU Level on Create flow.</description>
    <inlineHelpText>Check to disable auto-defaulting a new child Account&#39;s MOU_Level__c (Per Facility, or Corporate Level when the parent is Corporate Level).</inlineHelpText>
    <label>Disable Default MOU Level On Create</label>
    <type>Checkbox</type>
</CustomField>