unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Default_MOU_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Disable_Default_MOU_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Opportunity - On Create - Default MOU Requirement flow.</description>
    <inlineHelpText>Check to disable auto-defaulting Facility_MOU_Required__c on new Partner Expansion / Amendment Opportunities.</inlineHelpText>
    <label>Disable Default MOU Requirement</label>
    <type>Checkbox</type>
</CustomField>