unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Email_Scrubber__c.field-meta.xml
<CustomField>
    <fullName>Disable_Email_Scrubber__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Email Scrubber batch job.</description>
    <inlineHelpText>Check to disable the Email Scrubber batch job.</inlineHelpText>
    <label>Disable Email Scrubber</label>
    <type>Checkbox</type>
</CustomField>