unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Employer_Level_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Employer_Level_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Employer Level Automation</label>
    <type>Checkbox</type>
</CustomField>