unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Lead_Assignment_Flow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Assignment_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Lead assignment flow.</description>
    <inlineHelpText>Check to disable the Lead assignment flow.</inlineHelpText>
    <label>Disable Lead Assignment Flow</label>
    <type>Checkbox</type>
</CustomField>