unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Opportunity_Stage_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Stage_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables Opportunity stage validation logic.</description>
    <inlineHelpText>Check to disable Opportunity stage validation logic.</inlineHelpText>
    <label>Disable Opportunity Stage Validation</label>
    <type>Checkbox</type>
</CustomField>