unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Partner_Account_Routing__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Account_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Partner Account Routing</label>
    <type>Checkbox</type>
</CustomField>