unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Partner_Onboarding_Automation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Onboarding_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Partner Onboarding Automation</label>
    <type>Checkbox</type>
</CustomField>