unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Program_Select_Service_Types__c.field-meta.xml
<CustomField>
    <fullName>Disable_Program_Select_Service_Types__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Program - Screen Flow - Select Service Types flow (DWDECI-119).</description>
    <inlineHelpText>Check to disable the admin screen flow that selects Service Types from the master list and mass-generates Benefit records for a Program.</inlineHelpText>
    <label>Disable Program Select Service Types</label>
    <type>Checkbox</type>
</CustomField>