unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Reenrollment_for_Removed_or_self__c.field-meta.xml
<CustomField>
    <fullName>Disable_Reenrollment_for_Removed_or_self__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable - Block Reenrollment for Removed or Self Exit Scholar flow</description>
    <label>Disable Reenrollment for Removed or self</label>
    <type>Checkbox</type>
</CustomField>