unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Require_Offboarding_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disable_Require_Offboarding_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Account - On Edit - Require Offboarding Reason flow.</description>
    <inlineHelpText>Check to disable the validation that blocks saving an Offboarded Account without an Offboarding Reason.</inlineHelpText>
    <label>Disable Require Offboarding Reason</label>
    <type>Checkbox</type>
</CustomField>