unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Scholar_Contact_RT_Change__c.field-meta.xml
<CustomField>
    <fullName>Disable_Scholar_Contact_RT_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Account - Before Save - Block Scholar Contact RT Change flow.</description>
    <inlineHelpText>Check to disable the block on changing a Person Account&#39;s record type between Scholar and Contact.</inlineHelpText>
    <label>Disable Scholar Contact RT Change</label>
    <type>Checkbox</type>
</CustomField>