unpackaged/main/default/objects/Automation_Kill_Switch__c/fields/Disable_Warm_Handoff_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Disable_Warm_Handoff_Action_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables the Opportunity - On Edit - Apply Warm Handoff Action Plan flow.</description>
    <inlineHelpText>Check to disable the Warm Handoff Action Plan automation on Partner Opportunities.</inlineHelpText>
    <label>Disable Warm Handoff Action Plan</label>
    <type>Checkbox</type>
</CustomField>